--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div>
                 <h2>LINGUE:</h2>    <!-- METTERE BARRA LIVELLO PER INDICARE LA BRAVURA NELLA LINGUA -->
                 <ul>
-                    <li>Italiano</li>
-                    <li>Inglese</li>
-                    <li>Spagnolo</li>
+                    <li>Italiano<br><span>Scarso</span><input type="range" min="1" max="5" name="italiano" id="range"><span>Fluente</span></li>
+                    <li>Inglese<br><span>Scarso</span><input type="range" min="1" max="5" name="inglese" id="range"><span>Fluente</span></li>
+                    <li>Spagnolo<br><span>Scarso</span><input type="range" min="1" max="5" name="spagnolo" id="range"><span>Fluente</span></li>
                 </ul>
             </div>
 
