--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
             <div>
                 <h2>LINGUE:</h2>    <!-- METTERE BARRA LIVELLO PER INDICARE LA BRAVURA NELLA LINGUA -->
-                <ul>
-                    <li>Italiano<br><span>Scarso</span><input type="range" min="1" max="5" name="italiano" id="range"><span>Fluente</span></li>
+                <ul class="language">
+                    <li >Italiano<br><span>Scarso</span><input type="range" min="1" max="5" name="italiano" id="range"><span>Fluente</span></li>
                     <li>Inglese<br><span>Scarso</span><input type="range" min="1" max="5" name="inglese" id="range"><span>Fluente</span></li>
                     <li>Spagnolo<br><span>Scarso</span><input type="range" min="1" max="5" name="spagnolo" id="range"><span>Fluente</span></li>
                 </ul>
@@ -68,7 +68,7 @@
                 <div class="info">
                     <h1>Mario Rossi</h1> <!--in corsivo, come se fosse una firma...-->
                     <p>Via Pincopallino, 14<br>04100 Latina</p>
-                    <p>mario.rossi@gmail.com</p> <!--inserire link per aprire la posta per scrivere la mail-->
+                    <p><a>mario.rossi@gmail.com</p> <!--inserire link per aprire la posta per scrivere la mail, messo la mia per comodità e per vedere se funziona-->
                     <p>+39 1234567890</p>
                 </div>
             </div>
@@ -83,7 +83,7 @@
             </div>
 
             <div>
-                <h2>ESPERIENZE LAVORATIVE:</h2>
+                <h2>ESPERIENZE LAVORATIVE:</h2> <!--togliere i punti dalla lista-->
                 <span>Da:<input type="date"> A:<input type="date"><h3>Lavoro 1</h3></span><!--input per impostare date sul calendario-->
                 <ul>
                     <li>esperienza 1</li>
